test/fails/var_undef.imp.interpret
Tried to look up fictitious variable "t".
